# property-testing-preso

./: README.md  build.sbt  index.html  scalasyd-07-2017-find-more-bugs.html  yowlj2015.html  yownight2017-best-practice.html  yownight2017-best-practice.md  yownight2017-find-more-bugs.html  yownight2017-find-more-bugs.md
haskell/: cabal  test.cabal
haskell/test/: test.hs
haskell/test/Test/: Aeson.hs
js/: remark.js
src/test/scala/: Compose.scala  CompressBug.scala  DB.scala  Evolution.scala  Git.scala  HelloWorld.scala  HelloWorldSpec.scala  Idempotence.scala  ImplicitNaming.scala  Induction.scala  Json.scala  JsonBug.scala  Lists.scala  Money.scala  MultiplePaths.scala  Reverse.scala  State.scala  StateFile.scala  Symmetry.scala  ThereBackAgain.scala
